# qtada5

./: CMakeLists.txt  README.md
gnat/: qtada_config.gpr.in  qtada_qtcore.gpr
sources/QtCore/: CMakeLists.txt  qt5-qt_core.ads  qt5.ads  qt_ada.ads  typesystem_core.xml
sources/Qt_Core/: qt5.ads  qt_ada-api.ads  typesystem_core.xml
